kubernetes/namespace/prod/prometheus/prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-monitoring
  template:
    metadata:
      name: prometheus-monitoring
      labels:
        app: prometheus-monitoring
    spec:
      containers:

      # Prometheus server
      - name: prometheus
        image: prom/prometheus:v1.0.1
        args:
          - '-storage.local.retention=72h'
          - '-storage.local.memory-chunks=500000'
          - '-config.file=/etc/prometheus/prometheus.yml'
          - '-alertmanager.url=http://localhost:9093'
          - '-web.external-url=http://prometheus.wercker.com'
        ports:
        - name: web
          containerPort: 9090
        volumeMounts:
        - name: config-volume-prometheus
          mountPath: /etc/prometheus
        - name: config-volume-alert-rules
          mountPath: /etc/prometheus-rules
        resources:
          limits:
            cpu: 8000m
            memory: 8000Mi
          requests:
            cpu: 1000m
            memory: 500Mi

      #Alert manager
      - name: alertmanager
        image: quay.io/prometheus/alertmanager:v0.3.0
        args:
          - -config.file=/etc/prometheus/alertmanager.yml
        volumeMounts:
        - name: config-volume-alertmanager
          mountPath: /etc/prometheus

      # Volumens and config maps
      volumes:
      - name: config-volume-prometheus
        configMap:
          name: prometheus
      - name: config-volume-alertmanager
        configMap:
          name: prometheus-alertmanager
      - name: config-volume-alert-rules
        configMap:
          name: prometheus-alert-rules
