kubernetes/namespace/prod/prometheus/node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: node-exporter
    name: node-exporter
  name: node-exporter
spec:
  clusterIP: None
  ports:
  - name: scrape
    port: 9100
    protocol: TCP
  selector:
    app: node-exporter
  type: ClusterIP
----
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  template:
    metadata:
      labels:
        app: node-exporter
      name: node-exporter
    spec:
      containers:
      - image: quay.io/prometheus/node-exporter
        name: node-exporter
        args:
          - "-collector.procfs"
          - /host/proc
          - "-collector.sysfs"
          - /host/proc
          - "-collector.filesystem.ignored-mount-points"
          - ^/(sys|proc|dev|host|etc)($|/)
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
        volumeMounts:
        - mountPath: /host/proc
          name: procdir
          readOnly: true
        - mountPath: /host/sys
          name: sys
          readOnly: true
        - mountPath: /rootfs
          name: rootfs
          readOnly: true

      hostNetwork: true
      hostPID: true

      volumes:
      - hostPath:
          path: /proc
        name: procdir
      - hostPath:
          path: /sys
        name: sys
      - hostPath:
          path: /
        name: rootfs
