kubernetes/namespace/prod/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    name: prometheus-monitoring
  name: prometheus-monitoring
spec:
  selector:
    app: prometheus-monitoring
  ports:
  - name: prometheus
    protocol: TCP
    port: 9090
