kubernetes/namespace/prod/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-monitoring
spec:
  rules:
  - host: prometheus.flowlog-stats.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-monitoring
          servicePort: 9090
